# deep-research

./: .pre-commit-config.yaml  README.md  pyproject.toml
multi_tool_agent/: .env.example  __init__.py  agent.py
multi_tool_agent/core/: __init__.py  services.py
multi_tool_agent/core/agents/main/: __init__.py  aggregate.py  answer.py  classify.py  plan.py  research.py
multi_tool_agent/core/agents/research/: __init__.py
multi_tool_agent/core/agents/research/arxiv/: __init__.py  arx_agent.py  filter.py  find.py  ingest.py  rag.py
multi_tool_agent/core/agents/research/web/: __init__.py  search_agent.py
multi_tool_agent/core/tools/: __init__.py  arxiv.py  tavily.py
multi_tool_agent/data/: document_service.py  embedding.py  vector_store.py
multi_tool_agent/data/embeddings/: base.py  openai_embeddings.py
multi_tool_agent/data/vector_stores/: __init__.py  base.py  qdrant.py
multi_tool_agent/utils/: config.py  logger.py  utils.py
